[tool.poetry]
name = "oh-yay"
version = "0.1.0"
description = "Citations"
authors = ["Joe Redmond"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.4"
beautifulsoup4 = "^4.12.3"
langchain = "^0.1.17"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
